불필요한 주석 제거, clearConsole 메서드 추가